# gobit

./: Cargo.toml  LICENSE  README.md
benches/: features.rs  playout.rs  score.rs
scripts/: sgf2array.py  zobrist.py
src/: array2d.rs  block.rs  color.rs  display.rs  goban.rs  lib.rs  pattern.rs  point.rs  ring.rs  vertex.rs  zobrist.rs
src/score/: mod.rs  normal.rs  score.rs  search_tree.rs
