[package]
name = "gobit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[[bench]]
name = "features"
harness = false

[[bench]]
name = "playout"
harness = false

[[bench]]
name = "score"
harness = false

[dev-dependencies]
criterion = "0.4"

[dependencies]
slab = "0.4"
rand = "0.8"
